--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
+# production
+/build
+
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# build artifacts
-
 
 # Runtime data
 pids
@@ -59,3 +59,10 @@ typings/
 
 # dotenv environment variables file
 .env
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
